@@ -1,28 +1,23 @@
 /**
- * Copyright (c) 2010-2019 Contributors to the openHAB project
+ * Copyright (c) 2010-2018 by the respective copyright holders.
  *
- * See the NOTICE file(s) distributed with this work for additional
- * information.
- *
- * This program and the accompanying materials are made available under the
- * terms of the Eclipse Public License 2.0 which is available at
- * http://www.eclipse.org/legal/epl-2.0
- *
- * SPDX-License-Identifier: EPL-2.0
+ * All rights reserved. This program and the accompanying materials
+ * are made available under the terms of the Eclipse Public License v1.0
+ * which accompanies this distribution, and is available at
+ * http://www.eclipse.org/legal/epl-v10.html
  */
-package org.openhab.binding.tesla.internal.handler;
+package org.openhab.binding.tesla.handler;
 
-import static org.openhab.binding.tesla.internal.TeslaBindingConstants.*;
+import static org.openhab.binding.tesla.TeslaBindingConstants.*;
 
 import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
+import java.io.UnsupportedEncodingException;
 import java.math.BigDecimal;
-import java.nio.charset.StandardCharsets;
 import java.security.GeneralSecurityException;
 import java.text.SimpleDateFormat;
-import java.util.Base64;
 import java.util.Calendar;
 import java.util.Date;
 import java.util.HashMap;
@@ -41,6 +36,7 @@ import javax.ws.rs.client.WebTarget;
 import javax.ws.rs.core.MediaType;
 import javax.ws.rs.core.MultivaluedMap;
 import javax.ws.rs.core.Response;
+import javax.xml.bind.DatatypeConverter;
 
 import org.apache.commons.lang.StringUtils;
 import org.eclipse.smarthome.core.library.types.DecimalType;
@@ -60,8 +56,8 @@ import org.eclipse.smarthome.core.types.RefreshType;
 import org.eclipse.smarthome.core.types.State;
 import org.eclipse.smarthome.core.types.UnDefType;
 import org.glassfish.jersey.client.ClientProperties;
-import org.openhab.binding.tesla.internal.TeslaBindingConstants;
-import org.openhab.binding.tesla.internal.TeslaBindingConstants.EventKeys;
+import org.openhab.binding.tesla.TeslaBindingConstants;
+import org.openhab.binding.tesla.TeslaBindingConstants.EventKeys;
 import org.openhab.binding.tesla.internal.TeslaChannelSelectorProxy;
 import org.openhab.binding.tesla.internal.TeslaChannelSelectorProxy.TeslaChannelSelector;
 import org.openhab.binding.tesla.internal.protocol.ChargeState;
@@ -104,8 +100,6 @@ public class TeslaHandler extends BaseThingHandler {
     private static final int API_ERROR_INTERVAL_SECONDS = 15;
     private static final int EVENT_MAXIMUM_ERRORS_IN_INTERVAL = 10;
     private static final int EVENT_ERROR_INTERVAL_SECONDS = 15;
-    private static final int API_SLEEP_INTERVAL_MINUTES = 15;
-    private static final int MOVE_THRESHOLD_INTERVAL_MINUTES = 5;
 
     private final Logger logger = LoggerFactory.getLogger(TeslaHandler.class);
 
@@ -127,7 +121,6 @@ public class TeslaHandler extends BaseThingHandler {
     public final WebTarget vehicleTarget = vehiclesTarget.path(PATH_VEHICLE_ID);
     public final WebTarget dataRequestTarget = vehicleTarget.path(PATH_DATA_REQUEST);
     public final WebTarget commandTarget = vehicleTarget.path(PATH_COMMAND);
-    public final WebTarget wakeUpTarget = vehicleTarget.path(PATH_WAKE_UP);
     protected WebTarget eventTarget;
 
     // Threading and Job related variables
@@ -137,21 +130,13 @@ public class TeslaHandler extends BaseThingHandler {
     protected ScheduledFuture<?> slowStateJob;
     protected QueueChannelThrottler stateThrottler;
 
-    protected boolean allowWakeUp = false;
+    protected boolean allowWakeUp = true;
     protected long lastTimeStamp;
     protected long apiIntervalTimestamp;
     protected int apiIntervalErrors;
     protected long eventIntervalTimestamp;
     protected int eventIntervalErrors;
     protected ReentrantLock lock;
-
-    protected double lastLongitude;
-    protected double lastLatitude;
-    protected long lastLocationChangeTimestamp;
-
-    protected long lastStateTimestamp = System.currentTimeMillis();
-    protected String lastState = "";
-    protected boolean isInactive = false;
 
     private StorageService storageService;
     protected Gson gson = new Gson();
@@ -177,6 +162,9 @@ public class TeslaHandler extends BaseThingHandler {
                 connectJob = scheduler.scheduleWithFixedDelay(connectRunnable, 0, CONNECT_RETRY_INTERVAL,
                         TimeUnit.MILLISECONDS);
             }
+
+            eventThread = new Thread(eventRunnable, "ESH-Tesla-Event Stream-" + getThing().getUID());
+            eventThread.start();
 
             Map<Object, Rate> channels = new HashMap<>();
             channels.put(DATA_THROTTLE, new Rate(1, 1, TimeUnit.SECONDS));
@@ -217,7 +205,7 @@ public class TeslaHandler extends BaseThingHandler {
                 slowStateJob = null;
             }
 
-            if (eventThread != null && !eventThread.isInterrupted()) {
+            if (!eventThread.isInterrupted()) {
                 eventThread.interrupt();
                 eventThread = null;
             }
@@ -240,7 +228,11 @@ public class TeslaHandler extends BaseThingHandler {
             if (isAwake()) {
                 // Request the state of all known variables. This is sub-optimal, but the requests get scheduled and
                 // throttled so we are safe not to break the Tesla SLA
-                requestAllData();
+                requestData(DRIVE_STATE);
+                requestData(VEHICLE_STATE);
+                requestData(CHARGE_STATE);
+                requestData(CLIMATE_STATE);
+                requestData(GUI_STATE);
             }
         } else {
             if (selector != null) {
@@ -290,10 +282,10 @@ public class TeslaHandler extends BaseThingHandler {
                                 moveSunroof(0);
                             } else if (command instanceof IncreaseDecreaseType
                                     && command == IncreaseDecreaseType.INCREASE) {
-                                moveSunroof(Math.min(vehicleState.sun_roof_percent_open + 1, 100));
+                                moveSunroof(Math.min(chargeState.charge_limit_soc + 1, 100));
                             } else if (command instanceof IncreaseDecreaseType
                                     && command == IncreaseDecreaseType.DECREASE) {
-                                moveSunroof(Math.max(vehicleState.sun_roof_percent_open - 1, 0));
+                                moveSunroof(Math.max(chargeState.charge_limit_soc - 1, 0));
                             }
                             break;
                         }
@@ -369,18 +361,6 @@ public class TeslaHandler extends BaseThingHandler {
                             }
                             break;
                         }
-                        case FORCE_REFRESH: {
-                            if (command instanceof OnOffType) {
-                                if (((OnOffType) command) == OnOffType.ON) {
-                                    if (!isOnline()) {
-                                        wakeUp();
-                                    } else {
-                                        setActive();
-                                    }
-                                }
-                            }
-                            break;
-                        }
                         case ALLOWWAKEUP: {
                             if (command instanceof OnOffType) {
                                 allowWakeUp = (((OnOffType) command) == OnOffType.ON);
@@ -392,7 +372,7 @@ public class TeslaHandler extends BaseThingHandler {
                                 if (((OnOffType) command) == OnOffType.ON) {
                                     if (eventThread == null) {
                                         eventThread = new Thread(eventRunnable,
-                                                "openHAB-Tesla-Events-" + getThing().getUID());
+                                                "ESH-Tesla-Event Stream-" + getThing().getUID());
                                         eventThread.start();
                                     }
                                 } else {
@@ -499,14 +479,6 @@ public class TeslaHandler extends BaseThingHandler {
         sendCommand(parameter, null, target);
     }
 
-    public void requestAllData() {
-        requestData(DRIVE_STATE);
-        requestData(VEHICLE_STATE);
-        requestData(CHARGE_STATE);
-        requestData(CLIMATE_STATE);
-        requestData(GUI_STATE);
-    }
-
     protected String invokeAndParse(String command, String payLoad, WebTarget target) {
         logger.debug("Invoking: {}", command);
 
@@ -536,20 +508,38 @@ public class TeslaHandler extends BaseThingHandler {
 
             JsonParser parser = new JsonParser();
 
-            if (!checkResponse(response, false)) {
+            if (response != null && response.getStatus() == 200) {
+                try {
+                    JsonObject jsonObject = parser.parse(response.readEntity(String.class)).getAsJsonObject();
+                    logger.trace("Request : {}:{}:{} yields {}", new Object[] { command, payLoad, target.toString(),
+                            jsonObject.get("response").toString() });
+                    return jsonObject.get("response").toString();
+                } catch (Exception e) {
+                    logger.error("An exception occurred while invoking a REST request : '{}'", e.getMessage());
+                }
+            } else {
                 logger.error("An error occurred while communicating with the vehicle during request {} : {}:{}",
                         new Object[] { command, (response != null) ? response.getStatus() : "",
                                 (response != null) ? response.getStatusInfo() : "No Response" });
-                return null;
-            }
 
-            try {
-                JsonObject jsonObject = parser.parse(response.readEntity(String.class)).getAsJsonObject();
-                logger.trace("Request : {}:{}:{} yields {}",
-                        new Object[] { command, payLoad, target.toString(), jsonObject.get("response").toString() });
-                return jsonObject.get("response").toString();
-            } catch (Exception e) {
-                logger.error("An exception occurred while invoking a REST request : '{}'", e.getMessage());
+                if (apiIntervalErrors == 0 && response != null && response.getStatus() == 401) {
+                    authenticate();
+                }
+
+                apiIntervalErrors++;
+                if (apiIntervalErrors >= API_MAXIMUM_ERRORS_IN_INTERVAL) {
+                    logger.warn("Reached the maximum number of errors ({}) for the current interval ({} seconds)",
+                            API_MAXIMUM_ERRORS_IN_INTERVAL, API_ERROR_INTERVAL_SECONDS);
+                    updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.COMMUNICATION_ERROR);
+                    eventClient.close();
+                    return null;
+                }
+
+                if ((System.currentTimeMillis() - apiIntervalTimestamp) > 1000 * API_ERROR_INTERVAL_SECONDS) {
+                    logger.trace("Resetting the error counter. ({} errors in the last interval)", apiIntervalErrors);
+                    apiIntervalTimestamp = System.currentTimeMillis();
+                    apiIntervalErrors = 0;
+                }
             }
         }
 
@@ -557,8 +547,6 @@ public class TeslaHandler extends BaseThingHandler {
     }
 
     public void parseAndUpdate(String request, String payLoad, String result) {
-        final Double LOCATION_THRESHOLD = .0000001;
-
         JsonParser parser = new JsonParser();
         JsonObject jsonObject = null;
 
@@ -568,16 +556,6 @@ public class TeslaHandler extends BaseThingHandler {
                 switch (request) {
                     case DRIVE_STATE: {
                         driveState = gson.fromJson(result, DriveState.class);
-
-                        if (Math.abs(lastLatitude - driveState.latitude) > LOCATION_THRESHOLD
-                                || Math.abs(lastLongitude - driveState.longitude) > LOCATION_THRESHOLD) {
-                            logger.debug("Vehicle moved, resetting last location timestamp");
-
-                            lastLatitude = driveState.latitude;
-                            lastLongitude = driveState.longitude;
-                            lastLocationChangeTimestamp = System.currentTimeMillis();
-                        }
-
                         break;
                     }
                     case GUI_STATE: {
@@ -590,7 +568,7 @@ public class TeslaHandler extends BaseThingHandler {
                     }
                     case CHARGE_STATE: {
                         chargeState = gson.fromJson(result, ChargeState.class);
-                        if (isCharging()) {
+                        if (chargeState.charging_state != null && "Charging".equals(chargeState.charging_state)) {
                             updateState(CHANNEL_CHARGE, OnOffType.ON);
                         } else {
                             updateState(CHANNEL_CHARGE, OnOffType.OFF);
@@ -600,37 +578,6 @@ public class TeslaHandler extends BaseThingHandler {
                     }
                     case CLIMATE_STATE: {
                         climateState = gson.fromJson(result, ClimateState.class);
-                        break;
-                    }
-                    case "queryVehicle": {
-                        if (vehicle != null && !lastState.equals(vehicle.state)) {
-                            lastState = vehicle.state;
-
-                            // in case vehicle changed to online, refresh all data
-                            if (isOnline()) {
-                                logger.debug("Vehicle is now online, updating all data");
-                                lastLocationChangeTimestamp = System.currentTimeMillis();
-                                requestAllData();
-                            }
-
-                            setActive();
-                        }
-
-                        // reset timestamp if elapsed and set inactive to false
-                        if (isInactive && lastStateTimestamp + (API_SLEEP_INTERVAL_MINUTES * 60 * 1000) < System
-                                .currentTimeMillis()) {
-                            logger.debug("Vehicle did not fall asleep within sleep period, checking again");
-                            setActive();
-                        } else {
-                            boolean wasInactive = isInactive;
-                            isInactive = !isCharging() && !hasMovedInSleepInterval();
-
-                            if (!wasInactive && isInactive) {
-                                lastStateTimestamp = System.currentTimeMillis();
-                                logger.debug("Vehicle is inactive");
-                            }
-                        }
-
                         break;
                     }
                 }
@@ -735,7 +682,7 @@ public class TeslaHandler extends BaseThingHandler {
     }
 
     protected boolean isAwake() {
-        return vehicle != null && "online".equals(vehicle.state) && vehicle.vehicle_id != null;
+        return vehicle != null && !"asleep".equals(vehicle.state) && vehicle.vehicle_id != null;
     }
 
     protected boolean isOnline() {
@@ -749,59 +696,6 @@ public class TeslaHandler extends BaseThingHandler {
                         && (!"P".equals(driveState.shift_state) || !"Undefined".equals(driveState.shift_state));
             }
         }
-        return false;
-    }
-
-    protected boolean isInactive() {
-        // vehicle is inactive in case
-        // - it does not charge
-        // - it has not moved in the observation period
-        return isInactive && !isCharging() && !hasMovedInSleepInterval();
-    }
-
-    protected boolean isCharging() {
-        return chargeState != null && "Charging".equals(chargeState.charging_state);
-    }
-
-    protected boolean hasMovedInSleepInterval() {
-        return lastLocationChangeTimestamp > (System.currentTimeMillis()
-                - (MOVE_THRESHOLD_INTERVAL_MINUTES * 60 * 1000));
-    }
-
-    protected boolean allowQuery() {
-        return allowWakeUp || (isOnline() && !isInactive());
-    }
-
-    protected void setActive() {
-        isInactive = false;
-        lastLocationChangeTimestamp = System.currentTimeMillis();
-        lastLatitude = 0;
-        lastLongitude = 0;
-    }
-
-    protected boolean checkResponse(Response response, boolean immediatelyFail) {
-
-        if (response != null && response.getStatus() == 200) {
-            return true;
-        } else {
-            apiIntervalErrors++;
-            if (immediatelyFail || apiIntervalErrors >= API_MAXIMUM_ERRORS_IN_INTERVAL) {
-                if (immediatelyFail) {
-                    logger.warn("Got an unsuccessful result, setting vehicle to offline and will try again");
-                } else {
-                    logger.warn("Reached the maximum number of errors ({}) for the current interval ({} seconds)",
-                            API_MAXIMUM_ERRORS_IN_INTERVAL, API_ERROR_INTERVAL_SECONDS);
-                }
-
-                updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.COMMUNICATION_ERROR);
-                eventClient.close();
-            } else if ((System.currentTimeMillis() - apiIntervalTimestamp) > 1000 * API_ERROR_INTERVAL_SECONDS) {
-                logger.trace("Resetting the error counter. ({} errors in the last interval)", apiIntervalErrors);
-                apiIntervalTimestamp = System.currentTimeMillis();
-                apiIntervalErrors = 0;
-            }
-        }
-
         return false;
     }
 
@@ -918,7 +812,7 @@ public class TeslaHandler extends BaseThingHandler {
     }
 
     public void wakeUp() {
-        sendCommand(COMMAND_WAKE_UP, wakeUpTarget);
+        sendCommand(COMMAND_WAKE_UP);
     }
 
     protected Vehicle queryVehicle() {
@@ -927,11 +821,6 @@ public class TeslaHandler extends BaseThingHandler {
                 .header("Authorization", "Bearer " + logonToken.access_token).get();
 
         logger.debug("Querying the vehicle : Response : {}:{}", response.getStatus(), response.getStatusInfo());
-
-        if (!checkResponse(response, true)) {
-            logger.error("An error occurred while querying the vehicle");
-            return null;
-        }
 
         JsonParser parser = new JsonParser();
 
@@ -952,11 +841,6 @@ public class TeslaHandler extends BaseThingHandler {
         }
 
         return null;
-    }
-
-    protected void queryVehicleAndUpdate() {
-        vehicle = queryVehicle();
-        parseAndUpdate("queryVehicle", null, vehicleJSON);
     }
 
     private String getStorageKey() {
@@ -1081,22 +965,14 @@ public class TeslaHandler extends BaseThingHandler {
 
     protected Runnable fastStateRunnable = () -> {
         if (getThing().getStatus() == ThingStatus.ONLINE) {
-            boolean allowQuery = allowQuery();
-
-            if (allowQuery) {
+            if (isAwake()) {
                 requestData(DRIVE_STATE);
                 requestData(VEHICLE_STATE);
             } else {
-                if (vehicle == null) {
-                    vehicle = queryVehicle();
-                } else if (allowWakeUp) {
+                if (vehicle != null && allowWakeUp) {
                     wakeUp();
                 } else {
-                    queryVehicleAndUpdate();
-
-                    if (isOnline()) {
-                        logger.debug("Vehicle is neither charging nor moving, skipping updates to allow it to sleep");
-                    }
+                    vehicle = queryVehicle();
                 }
             }
         }
@@ -1116,25 +992,17 @@ public class TeslaHandler extends BaseThingHandler {
 
     protected Runnable slowStateRunnable = () -> {
         if (getThing().getStatus() == ThingStatus.ONLINE) {
-            boolean allowQuery = allowQuery();
-
-            if (allowQuery) {
+            if (isAwake()) {
                 requestData(CHARGE_STATE);
                 requestData(CLIMATE_STATE);
                 requestData(GUI_STATE);
                 queryVehicle(MOBILE_ENABLED_STATE);
                 parseAndUpdate("queryVehicle", null, vehicleJSON);
             } else {
-                if (vehicle == null) {
-                    vehicle = queryVehicle();
-                } else if (allowWakeUp) {
+                if (vehicle != null && allowWakeUp) {
                     wakeUp();
                 } else {
-                    queryVehicleAndUpdate();
-
-                    if (isOnline()) {
-                        logger.debug("Vehicle is neither charging nor moving, skipping updates to allow it to sleep");
-                    }
+                    vehicle = queryVehicle();
                 }
             }
         }
@@ -1382,10 +1250,8 @@ public class TeslaHandler extends BaseThingHandler {
             try {
                 String result = "";
 
-                if (getThing().getStatus() == ThingStatus.ONLINE) {
-                    if (request.equals(COMMAND_WAKE_UP) || isAwake()) {
-                        result = invokeAndParse(request, payLoad, target);
-                    }
+                if (isAwake() && getThing().getStatus() == ThingStatus.ONLINE) {
+                    result = invokeAndParse(request, payLoad, target);
                 }
 
                 if (result != null && !"".equals(result)) {
@@ -1415,7 +1281,11 @@ public class TeslaHandler extends BaseThingHandler {
 
         private String getBasicAuthentication() {
             String token = this.user + ":" + this.password;
-            return "Basic " + Base64.getEncoder().encodeToString(token.getBytes(StandardCharsets.UTF_8));
+            try {
+                return "Basic " + DatatypeConverter.printBase64Binary(token.getBytes("UTF-8"));
+            } catch (UnsupportedEncodingException ex) {
+                throw new IllegalStateException("Cannot encode with UTF-8", ex);
+            }
         }
     }
 }
